# s3daemon

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yaml  oci.yaml
python/s3daemon/: s3daemon.py  send.py
s3daemon/: s3daemon.py  send.py
summittests/: Makefile  cpFilesfromS3.sh  envvars-template.sh  envvars.sh  gatherLogs.sh  pushToNodes.sh  readFile.sh  readTest.sh  report.py  run23daemon.sh  runOnNodes.sh  runs3daemon.sh  sendTest.sh  stops3daemon.sh
